z-index fixed

--- a/assets/css/essential-addons-elementor.css
+++ b/assets/css/essential-addons-elementor.css
@@ -1471,7 +1471,7 @@ body:not(.x-ethos):not(.x-integrity):not(.x-renew):not(.x-icon) .eael-product-ca
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: 999;
+    z-index: 2;
     opacity: 0;
     -webkit-transition: opacity .2s ease-in-out, -webkit-transform .25s cubic-bezier(.19, 1, .22, 1);
     -moz-transition: opacity .2s ease-in-out, -moz-transform .25s cubic-bezier(.19, 1, .22, 1);
@@ -1486,7 +1486,7 @@ body:not(.x-ethos):not(.x-integrity):not(.x-renew):not(.x-icon) .eael-product-ca
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: 99999;
+    z-index: 3;
 }
 .eael-entry-title {
     margin: 10px 0 5px;
